Fix some broken layout

--- a/styles.css
+++ b/styles.css
@@ -68,20 +68,21 @@ button {
 
 .containertransp {
     display: none;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.75);
     width: 100%;
-    height: 100%;
-    z-index: 2;
+    height: auto;
+    z-index: 5;
     top: 0;
     position: fixed;
 }
 
 .popup {
+    overflow: hidden;
     opacity: 1;
     position: fixed;
     top: 5vw;
     margin: 5% 2.5%;
-    z-index: 3;
+    z-index: 10;
     width: 95%;
     height: 90%;
     background-color: white;
@@ -92,13 +93,15 @@ button {
     color: #172b4d;
     font-weight: bold;
     padding: 5vw;
-    margin: 10px 0 30px 0;
+    margin: 2vw 0 5vw 0;
+    font-size: 7vw;
 }
 
 .popup .close {
     font-size: 10vw;
     color: #67798e;
     font-weight: 100;
+    top: 5vw;
 }
 
 .popup p {
@@ -113,15 +116,23 @@ button {
 .popup .links {
     display: flex;
     justify-content: space-around;
-    width: 90vw;
+    margin: 0;
 }
 
 .links .flatbutton {
     display: flex;
-    width: fit-content;
-    padding: 15px;
-    justify-content: space-between;
-    font-size: 20px;
+    padding: 2vw;
+    justify-content: center;
+    font-size: 4vw;
+    font-weight: normal;
+    width: 32vw;
+    height: 6vw;
+    margin-top: 5vw;
+}
+
+.links .flatbutton:hover {
+    width: 32vw;
+    height: 6vw;
 }
 
 .flatbutton a {
@@ -130,10 +141,12 @@ button {
     color: white;
     text-align: center;
     justify-content: space-between;
+    width: fit-content;
 }
 
 .flatbutton img {
     margin-left: 15px;
+    width: 4vw;
 }
 
 .popimg {
@@ -147,11 +160,13 @@ button {
     width: auto;
     display: flex;
     flex-direction: row;
-    margin-left: 5vw;
+    margin: 0 0 0 5vw;
 }
 
 .technologies li {
     font-weight: bold;
+    padding: 2vw;
+    font-size: 3vw;
 }
 
 
@@ -600,7 +615,7 @@ input {
     }
 }
 
-@media screen and (min-width: 1000px) {
+@media screen and (min-width: 800px) {
     .d-hidden {
         display: none !important;
     }
@@ -725,7 +740,7 @@ input {
     .grid-container {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
-        grid-auto-rows: minmax(500px, auto);
+        grid-auto-rows: minmax(300px, auto);
         box-sizing: border-box;
         gap: 24px;
         padding: 2vh 15vh 10vh 15vh;
